--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.0.7",
   "name": "async-node-events",
   "description": "Asynchronous Node EventEmitter",
   "keywords": [
@@ -6,8 +7,16 @@
     "events"
   ],
   "homepage": "http://github.com/joshuafcole/async-node-events",
-  "author": "Joshua Cole <joshuafcole@gmail.com>, David Ellis",
-  "version": "0.0.6",
+  "author": "David Ellis",
+  "contributors": [{
+    "name": "Joshua Cole",
+    "email": "joshuafcole@gmail.com"
+  }, {
+    "name": "Digital Bazaar, Inc.",
+    "email": "support@digitalbazaar.com",
+    "url": "http://digitalbazaar.com/"
+  }],
+  "license": "MIT",
   "bugs": "https://github.com/digitalbazaar/async-node-events/issues",
   "repository": {
     "type": "git",
@@ -34,3 +43,4 @@
     "test": "gulp test"
   }
 }
+
