--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "0.0.8",
+  "version": "0.0.9-0",
   "name": "async-node-events",
   "description": "Asynchronous Node EventEmitter",
   "keywords": [
