--- a/package.json
+++ b/package.json
@@ -30,21 +30,25 @@
     "is-async": "0.0.2"
   },
   "devDependencies": {
-    "chai": "^1.9.0",
-    "docco": "*",
+    "chai": "^4.2.0",
     "eslint": "^6.5.1",
     "eslint-config-digitalbazaar": "^2.0.1",
-    "gulp": "^3.6.0",
-    "gulp-coverage": "^0.1.20",
-    "gulp-coverage-reporter": "git+ssh://git@github.com:joshuafcole/gulp-coverage-reporter.git#0.0.1",
-    "gulp-mocha": "^0.4.1",
-    "mocha": "^1.18.0"
+    "mocha": "^6.2.1",
+    "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^14.1.1"
   },
   "engines": {
     "node": ">=8"
   },
   "scripts": {
     "lint": "eslint 'lib/*.js' 'test/*.js'",
-    "test": "gulp test"
+    "coverage": "nyc --reporter=lcov --reporter=text-summary npm test",
+    "coverage-report": "nyc report",
+    "test": "mocha test"
+  },
+  "nyc": {
+    "exclude": [
+      "test"
+    ]
   }
 }
