--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.1-0",
+  "version": "2.0.0",
   "name": "async-node-events",
   "description": "Asynchronous EventEmitter",
   "keywords": [
